--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
         <div class="primary-user">
           <div class="user">
-            <p>
-              <img src="src/images/covers/gorillaz.jpg" alt=""/>
+            <p id="login-box">
+              <img src="src/images/icon-user.png" alt="" />
               <span id="name-user">Login</span>
             </p>
           </div>
@@ -87,7 +87,7 @@
       <button class="modal-btn primary" id="hide-modal">Cerrar Modal</button>
     </div>
   </div>
-  <div class="modal-user modal" id="modal-user" style="animation: 0.8s ease 0s 1 normal forwards running modalIn;">
+  <div class="modal-user modal" id="modal-user">
     <h1>Login!</h1>
     <div class="modal-content modal-content-user">
       <form class="search" id="form-user">
