--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </section>
   <div class="overlay" id="overlay">
   </div>
-  <div class="modal" id="modal">
+  <div class="modal movie-modal" id="modal">
     <h1>Título de pelicula</h1>
     <div class="modal-content">
       <img src="" alt="" width="170" height="256">
